--- a/partials/nav.html
+++ b/partials/nav.html
@@ -4,11 +4,12 @@
             <a class="navbar-item" href="index.html">
                 <img src="https://bulma.io/images/bulma-type-white.png" alt="Logo">
             </a>
-            <span class="navbar-burger burger" data-target="navbarMenuHeroA">
-                <span></span>
-                <span></span>
-                <span></span>
-            </span>
+            <a role="button" class="navbar-burger" data-target="navMenu" aria-label="menu" aria-expanded="false">
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+                <span aria-hidden="true"></span>
+            </a>
+
         </div>
         <div id="navbarMenuHeroA" class="navbar-menu">
             <div class="navbar-end">
