--- a/css/akwa.css
+++ b/css/akwa.css
@@ -7,12 +7,21 @@ body {
   font-family: 'Product Sans';
 }
 
+.navbar-item {
+  letter-spacing: .5px;
+  text-transform: uppercase;
+}
+
+.navbar-item:hover {
+  color: #ff9700 !important;
+}
+
 .hero {
   padding: 0px !important;
 }
 
 .hero .navbar {
-  background: #222;
+  background: #222 !important;
   padding: 10px 0px;
 }
 
@@ -97,12 +106,19 @@ body {
 }
 
 @media screen and (max-width: 600px) {
+  body {
+    font-size: .9em;
+  }
+  .hero .navbar {
+    background: #222 !important;
+    padding: 5px 0px;
+  }
   .meme-side,
   .video-side,
   .emoji-side {
     padding: 20% 50px;
     text-align: center;
-    height: 40vh;
+    height: auto;
     color: #fff;
   }
   .meme-side h2,
@@ -112,6 +128,18 @@ body {
   .emoji-side h2,
   .emoji-side p {
     text-shadow: 0 2px 4px rgba(0, 0, 0, 0.52);
+  }
+  .my-title {
+    font-family: 'Luckiest Guy', cursive;
+    font-size: 2.2em;
+    font-weight: 700;
+    margin-bottom: 10px;
+    text-transform: uppercase;
+    line-height: 110% !important;
+  }
+  .my-subtitle {
+    font-size: 1.2em;
+    margin-bottom: 20px;
   }
 }
 /*# sourceMappingURL=akwa.css.map */
