--- a/css/akwa.scss
+++ b/css/akwa.scss
@@ -10,12 +10,21 @@ body {
     font-family: 'Product Sans';
 }
 
+.navbar-item {
+    letter-spacing: .5px;
+    text-transform: uppercase;
+    &:hover {
+        color: $secondary !important;
+    }
+}
+
+
 .hero {
     padding: 0px !important;
 }
 
 .hero .navbar {
-    background: #222;
+    background: #222 !important;
     padding: 10px 0px;
 }
 
@@ -95,16 +104,35 @@ body {
 }
 
 @media screen and (max-width: 600px) {
+    body {
+        font-size: .9em;
+    }
+    .hero .navbar {
+        background: #222 !important;
+        padding: 5px 0px;
+    }
     .meme-side,
     .video-side,
     .emoji-side {
         padding: 20% 50px;
         text-align: center;
-        height: 40vh;
+        height: auto;
         color: #fff;
         h2,
         p {
             text-shadow: 0 2px 4px rgba(0, 0, 0, 0.52);
         }
+    }
+    .my-title {
+        font-family: 'Luckiest Guy', cursive;
+        font-size: 2.2em;
+        font-weight: 700;
+        margin-bottom: 10px;
+        text-transform: uppercase;
+        line-height: 110% !important;
+    }
+    .my-subtitle {
+        font-size: 1.2em;
+        margin-bottom: 20px;
     }
 }
