--- a/css/akwa.css
+++ b/css/akwa.css
@@ -26,9 +26,9 @@ body {
 }
 
 .my-title {
-  font-family: 'Luckiest Guy', cursive;
-  font-size: 2.8em;
-  font-weight: 700;
+  font-family: 'Circular', sans-serif;
+  font-size: 2.5em;
+  font-weight: 900;
   margin-bottom: 10px;
   text-transform: uppercase;
   line-height: 110% !important;
